--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ body main#details .card-image {
   padding: 1em 2em;
   border-radius: 1em;
   position: absolute;
-  top: 25em;
+  top: 20em;
 }
 
 p.about-para {
@@ -387,10 +387,10 @@ footer {
   width: 100%;
 }
 
-/* footer.index{
+footer.index{
   position: absolute;
   bottom: 0;
-} */
+}
 
 footer.details {
   position: absolute;
@@ -501,7 +501,7 @@ footer p {
   }
 
   body.index h1 {
-    margin-top: 4em;
+    margin-top: 2em;
     font-size: 2.3em;
     text-shadow: 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa,
       0 0 151px #0fa;
